--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "build": "jison src/nql.y src/nql.l -o dist/parser.js",
     "lint": "eslint . --ext .js --cache",
+    "pretest": "yarn build",
     "posttest": "yarn lint",
     "test": "NODE_ENV=testing mocha -- $(find test -name '*.test.js')",
+    "preship": "yarn test",
     "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn publish && git push --follow-tags; fi"
   },
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-plugin-ghost": "0.0.25",
+    "jison": "0.4.18",
     "mocha": "5.2.0",
     "should": "13.2.1",
     "sinon": "6.0.0"
