--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "eslint-plugin-ghost": "0.0.25",
     "jison": "0.4.18",
     "mocha": "5.2.0",
-    "should": "13.2.1",
-    "sinon": "6.0.0"
+    "should": "13.2.1"
   },
   "dependencies": {}
 }
