--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "pretest": "yarn build",
     "posttest": "yarn lint",
     "test": "NODE_ENV=testing mocha -- $(find test -name '*.test.js')",
+    "test:lex": "NODE_ENV=testing mocha -- $(find test -name 'lex*.test.js')",
+    "test:parse": "NODE_ENV=testing mocha -- $(find test -name 'parse*.test.js')",
     "preship": "yarn test",
     "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn publish && git push --follow-tags; fi"
   },
