--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lint": "eslint . --ext .js --cache",
     "pretest": "yarn build",
     "posttest": "yarn lint",
-    "test": "NODE_ENV=testing mocha -- $(find test -name '*.test.js')",
-    "test:lex": "NODE_ENV=testing mocha -- $(find test -name 'lex*.test.js')",
-    "test:parse": "NODE_ENV=testing mocha -- $(find test -name 'parse*.test.js')",
+    "test": "NODE_ENV=testing mocha ./test/**/*.test.js",
+    "test:lex": "NODE_ENV=testing mocha ./test/**/lex*.test.js",
+    "test:parse": "NODE_ENV=testing mocha ./test/**/pars*.test.js",
     "preship": "yarn test",
     "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn publish && git push --follow-tags; fi"
   },
