--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nexes/nql-lang",
+  "name": "@pollbox/nql-lang",
   "version": "0.0.1",
   "description": "tbc",
   "repository": "git@github.com:NexesJS/NQL-Lang.git",
